Notebook page saves to firebase